--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>This is a heading</h1>
+{% extends "layout_bootstrap.html" %}
 
-    <p>This is a paragraph</p>
+{% block content %}
 
-    <ul>
-        <li>First list item</li>
-        <li>Second list item</li>
-        <li>Third list item</li>
-    </ul>
+    <h2>Home</h2>
 
-</body>
-</html>
+    <p>Welcome to my app! Lorum ipsum.</p>
+
+{% endblock %}
